# KafkaLearnings

./: .gitignore  README.md
ReplicatingTopics/: consumer1_prducer2.py  consumer2.py  producer1.py  readme.md
avro/: pyproject.toml
avro/src/: avro_consumer.py  avro_producer.py  config.ini  config.py  consumer.py  consumer_factory.py  main.py  producer.py  producer_factory.py  read_schema.py  serialize_avro.py  user.avsc  user.py
old_proj/: README.md  producer.py
replicatingtopics/: consumer.py  main.py  producer.py  pyproject.toml  replicator.py
replicatingtopics/src/: config.ini  consumer.py  containers.py  main.py  producer.py  replicator.py  tests.py
