[tool.poetry]
name = "avro"
version = "0.1.0"
description = ""
authors = ["SadineniAbhi <abhisadineni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.4.0"
fastavro = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
