[tool.poetry]
name = "replicatingtopics"
version = "0.1.0"
description = "Replicates Kafka topics into other topics"
authors = ["SadineniAbhi <abhisadineni@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
confluent-kafka = "^2.4.0"
dependency-injector = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
