[tool.poetry]
name = "replicatingtopics"
version = "0.1.0"
description = "Replicates Kafka topics into other topics"
authors = ["SadineniAbhi <abhisadineni@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.8"
pytest = "^8.2.2"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
